[tool.poetry]
name = "shap-values-demo"
version = "0.1.0"
description = ""
authors = ["karen-settles <kfsettles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.10"
numpy = "1.26.4"
scipy = "<1.13"
pyarrow = "14.0.2"
numexpr = "2.8.7"
# snowflake-connector-python = "3.15.0"
# snowflake-sqlalchemy = "1.7.3"
pandas = ">=2.1.4,<2.2"
pyyaml = ">=6.0.1,<7.0"
xgboost = ">=2.0.3,<2.1"
scikit-learn = ">=1.4.0,<1.5"
boto3 = ">=1.34.34,<1.36"
ipykernel = ">=6.29.0,<7"
tqdm = ">=4.66.1,<5"
s3fs = ">=2024.9.0,<2025"
lifelines = ">=0.29.0,<0.30"
jinja2 = ">=3.1.4,<3.2"
seaborn = ">=0.13.2,<0.14"
# scikit-survival = ">=0.23.0,<0.24"
requests = ">=2.32.3,<3.0"
# aws-secretsmanager-caching = ">=1.1.3,<1.2"
# imbalanced-learn = ">=0.12.3,<0.13"
statsmodels = ">=0.14.4,<0.15"
lightgbm = ">=4.6.0,<4.7"
catboost = ">=1.2.8,<1.3"
shap = ">=0.47.2,<0.48"
pandasql = ">=0.7.3,<0.8"
urllib3 = "1.26.20"
ipywidgets = "^8.1.8"
jupyterlab = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"